--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "gulp-ruby-sass": "^2.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-ruby-sass": "^2.1.1",
     "gulp-sass": "^3.1.0"
   },
   "scripts": {
